# extrapanel-pc

./: .editorconfig  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  README.md  build.ninja  dub.json  install.py  luac.out  meson.build
build-aux/: preinstall.py
build-aux/meson/: preinstall.py
data/: meson.build  org.aurorafoss.extrapanel.appdata.xml  org.aurorafoss.extrapanel.desktop  org.aurorafoss.extrapanel.gresource.xml  structure
data/icons/: meson.build
data/icons/hicolor/: icon-theme.cache
data/systemd/: extrapanel-daemon.service
data/ui/: installer.ui  uninstaller.ui  window.ui  window.ui~
source/: meson.build
source/extrapanel/app/: main.d.in  ui.d
source/extrapanel/app/plugin/: browser.d
source/extrapanel/app/ui/: ui.d
source/extrapanel/core/connection/: bluetooth.d  boilerplate.d  debug.d  usb.d  wifi.d
source/extrapanel/core/plugin/: info.d  plugin.d
source/extrapanel/core/script/: runner.d
source/extrapanel/core/util/: config.d  exception.d  formatter.d  logger.d  paths.d  util.d
source/extrapanel/daemon/: daemon.d
source/extrapanel/daemon/plugin/: runner.d
source/extrapanel/manager/: main.d.in
source/extrapanel/manager/ui/: installer.d  uninstaller.d
source/extrapanel/tray/: main.d  tray.d
src/: main.d.in  meson.build
src/app/: app.d
src/connection/: bluetooth.d  boilerplate.d  connection.d  debug.d  usb.d  wifi.d
src/daemon/: daemon.d
src/plugin/: browser.d  plugin.d  runner.d
src/tray/: tray.d
src/util/: config.d  exception.d  logger.d  paths.d  util.d
tools/: dub.sh
tools/example-files/: extrapanel-bootstrap-config.cfg
tools/example-files/example-plugin-installed/: config.cfg  main.lua  meta.json
tools/example-files/example-plugin-raw/pc/: main.lua
